# ProjectPart1

./: CMakeLists.txt  README.md  app.cpp  makefile
.github/workflows/: build_and_test.yml  c-cpp.yml
internal/: methods.h
qa/: account_tests.cpp
